# jaunder

./: .coverage-baseline  .coverage-manifest.json  .crap-manifest.json  .gitattributes  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  HISTORY-REWRITE-SURVEY.md  README.md  clippy.toml  coverage-baseline.json  crap-manifest.json  deny.toml  flake.nix  opencode.jsonc  rulesync.jsonc  rust-toolchain.toml
client/: Cargo.toml
client/src/: dialog.rs  dom.rs  lib.rs  navigation.rs  reactive.rs  storage.rs
common/: Cargo.toml
common/src/: absolute_url.rs  audience.rs  auth.rs  backup.rs  bio.rs  db_enum.rs  display_name.rs  email.rs  ids.rs  invite.rs  lib.rs  list_state.rs  mailbox.rs  mailer.rs  media.rs  metrics.rs  pagination.rs  password.rs  post_body.rs  post_summary.rs  post_title.rs  registration.rs  render.rs  root_relative_url.rs  seed.rs  site.rs  slug.rs  smtp.rs  storage.rs  tag.rs  test_support.rs  text.rs  time.rs  token.rs  username.rs  visibility.rs
common/src/atompub/: categories.rs  entry.rs  mod.rs  rsd.rs  service.rs  xml.rs
common/src/feed/: atom.rs  feed_path.rs  json.rs  metadata.rs  mod.rs  rss.rs  settings.rs  window.rs
common/src/storage/: app_state.rs  atomic.rs  email.rs  invites.rs  media.rs  mod.rs  password.rs  posts.rs  sessions.rs  site_config.rs  user_config.rs  users.rs
common/src/websub/: capturing.rs  mod.rs
csr/: Cargo.toml  index.html
csr/src/: lib.rs
db-test-harness/: Cargo.toml
db-test-harness/src/: lib.rs
docs/: DESIGN.md  (+12 more)
host/: Cargo.toml
host/src/: auth.rs  capture.rs  error.rs  invite.rs  lib.rs  metrics.rs  token.rs
macros/: Cargo.toml
macros/src/: id_newtype.rs  lib.rs  num_newtype.rs  str_enum.rs  str_newtype.rs
macros/tests/: id_newtype.rs  identity.rs  str_enum.rs  str_newtype.rs
server/: Cargo.toml  build.rs
server/assets/: jaunder-themes.css  jaunder.css
server/migrations/: 0003_create_sessions.sql  0004_create_invites.sql  0005_add_email_to_users.sql
server/migrations/postgres/: 0002_create_users.sql  0003_create_sessions.sql  0008_create_posts.sql  0010_nullable_post_titles.sql  0013_create_user_config.sql
server/migrations/sqlite/: 0006_create_email_verifications.sql  0007_create_password_resets.sql  0008_create_posts.sql  0009_create_tags.sql  0012_create_media.sql  0013_create_user_config.sql
server/src/: assets.rs  auth.rs  backup.rs  cli.rs  commands.rs  context.rs  lib.rs  mailer.rs  main.rs  media.rs  media_manager.rs  observability.rs  password.rs  runtime_file.rs  site.rs  soft_path.rs  storage.rs  tag.rs  test_support.rs  username.rs
server/src/atompub/: mapping.rs  media.rs  mod.rs  posts.rs  rsd.rs  service.rs
server/src/feed/: handlers.rs  mod.rs  regenerate.rs  worker.rs
server/src/mailer/: file.rs  mod.rs  smtp.rs
server/src/projector/: mod.rs
server/src/storage/: mod.rs  postgres.rs  sqlite.rs
server/src/websub/: file_capture.rs  http.rs  mod.rs  noop.rs
server/tests/: atompub_media.rs  atompub_posts.rs  atompub_rsd.rs  atompub_service.rs  backup_interop.rs  commands.rs  feed_events_hook.rs  feed_handlers.rs  feed_regenerate.rs  feed_worker.rs  main.rs  media_handlers.rs  static_assets.rs  storage.rs  web_account.rs  web_audiences.rs  web_auth.rs  web_backup.rs  web_email.rs  web_media.rs  web_password_reset.rs  web_posts.rs  web_sessions.rs  web_site.rs  web_subscriptions.rs  web_tags.rs
server/tests/atompub/: atompub_media.rs  atompub_posts.rs  atompub_rsd.rs  atompub_service.rs  main.rs  mod.rs
server/tests/feed/: feed_events_concurrency.rs  feed_events_hook.rs  feed_handlers.rs  feed_regenerate.rs  feed_worker.rs  main.rs  mod.rs
server/tests/helpers/: mod.rs  websub_capturing.rs
server/tests/misc/: backup_fixture.rs  backup_interop.rs  cli_subprocess.rs  commands.rs  main.rs  media_handlers.rs  mod.rs  pg_teardown.rs  static_assets.rs
server/tests/projector/: main.rs  mod.rs  projector.rs
server/tests/storage/: main.rs  mod.rs  storage.rs
server/tests/web/: audiences.rs  main.rs  mod.rs  router.rs  web_account.rs  web_audiences.rs  web_auth.rs  web_backup.rs  web_email.rs  web_media.rs  web_password_reset.rs  web_posts.rs  web_sessions.rs  web_site.rs  web_subscriptions.rs  web_tags.rs
storage/: Cargo.toml
storage/migrations/postgres/: 0004_create_invites.sql  0005_add_email_to_users.sql  0006_create_email_verifications.sql  0007_create_password_resets.sql  0009_create_tags.sql  0012_create_media.sql  0014_create_feed_cache.sql  0015_create_feed_events.sql  0016_add_post_summary.sql  0017_sessions_label_not_null.sql  0018_create_visibility_lookups.sql  0019_create_subscriptions.sql  0020_create_audiences.sql  0021_create_post_audiences.sql  0023_create_idempotency_keys.sql  0023_defer_foreign_keys.sql
storage/migrations/sqlite/: 0001_create_site_config.sql  0002_create_users.sql  0010_nullable_post_titles.sql  0011_add_is_operator_to_users.sql  0014_create_feed_cache.sql  0015_create_feed_events.sql  0017_sessions_label_not_null.sql  0018_create_visibility_lookups.sql  0019_create_subscriptions.sql  0020_create_audiences.sql  0021_create_post_audiences.sql  (+4 more)
storage/src/: app_state.rs  atomic.rs  audiences.rs  auth.rs  backend.rs  backup.rs  db.rs  email.rs  feed_cache.rs  feed_events.rs  helpers.rs  invites.rs  lib.rs  media.rs  media_manager.rs  password.rs  post_service.rs  postgres.rs  posts.rs  render.rs  sessions.rs  site_config.rs  smtp.rs  sql.rs  sqlite.rs  subscriptions.rs  test_support.rs  user_config.rs  users.rs
test-support/: Cargo.toml
test-support/src/: lib.rs  main.rs
test-support/tests/: cli.rs
tools/devtool/: Cargo.toml
web/: Cargo.toml
web/src/: auth.rs  backup.rs  email.rs  error.rs  feed_discovery.rs  feed_events.rs  forms.rs  invites.rs  lib.rs  mail.rs  media.rs  password_reset.rs  posts.rs  profile.rs  reactive.rs  route_segments.rs  sessions.rs  storage.rs  tags.rs  test_support.rs  viewer.rs
xtask/: Cargo.toml
xtask/src/: adr.rs  adr_readme.rs  audit_wasm.rs  git.rs  ids.rs  lib.rs  main.rs  memo.rs  nix_build.rs  result.rs  sh.rs
(+1032 files in other folders)
