[workspace]
resolver = "2"
members = [
  "common",
  "csr",
  "host",
  "server",
  "storage",
  "test-support",
  "web"
]
exclude = ["xtask"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# Force web crate to a single CGU in test builds so inventory::submit! statics
# are always linked when any web symbol is referenced.
[profile.test.package.web]
codegen-units = 1

[workspace.dependencies]
common = { path = "common" }
host = { path = "host" }
storage = { path = "storage" }
leptos = { version = "0.8.2" }
leptos_dom = { version = "0.8.2" }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
leptos_axum = { version = "0.8.2" }
reactive_stores = { version = "0.4.3" }

async-trait = "0.1"
axum = "0.8.4"
clap = { version = "4", features = ["derive", "env"] }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
http = "1.3.1"
log = "0.4.27"
simple_logger = "5.0.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "metrics", "testing"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "metrics"] }
sqlx = { version = "0.8", features = ["sqlite", "postgres", "migrate", "runtime-tokio", "chrono"] }
chrono = "0.4"
croner = "2.2"
tempfile = "3"
rstest = "0.26"
rstest_reuse = "0.7"
mockall = "0.13"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
rpassword = "7"
email_address = "0.2"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
orgize = "0.10.0-alpha.10"
pulldown-cmark = "0.13"
thiserror = "2.0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
tokio-cron-scheduler = "0.13"
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.82"
js-sys = "0.3.82"
urlencoding = "2"
percent-encoding = "2"

# TEMPORARY (jaunder #193 / ADR-0043): route atom_syndication and rss to forks that
# depend on quick-xml >= 0.41, clearing RUSTSEC-2026-0194/0195. Upstream's latest
# releases (atom_syndication 0.12.8 / rss 2.0.13) hard-pin quick-xml ^0.39 and no
# 0.39.x backport exists, so [patch] to quick-xml directly is impossible; the forks
# raise the requirement instead. The fork checkouts are vendored hermetically into the
# Nix build via flake inputs + crane overrideVendorGitCheckout (see flake.nix). Remove
# this block once upstream publishes releases on quick-xml >= 0.41.
[patch.crates-io]
atom_syndication = { git = "https://github.com/jaunder-org/atom.git", rev = "2462e3798295047ba35078b9634bcd129e887ffe" }
rss = { git = "https://github.com/jaunder-org/rss.git", rev = "60b2a81445160af85ab94a23774c74e6616decfe" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Production code must not panic via unwrap()/expect(). Permitted in tests via
# clippy.toml (allow-unwrap-in-tests / allow-expect-in-tests).
unwrap_used = "deny"
expect_used = "deny"
