[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
argon2 = { workspace = true }
async-trait.workspace = true
email_address.workspace = true
chrono.workspace = true
croner.workspace = true
orgize.workspace = true
pulldown-cmark.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
rss = { version = "2", default-features = false }
atom_syndication = { version = "0.12", default-features = false }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
test-utils = []

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
