[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
argon2 = { workspace = true }
async-trait.workspace = true
email_address.workspace = true
chrono.workspace = true
croner.workspace = true
orgize.workspace = true
pulldown-cmark.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
rss = { version = "2", default-features = false, features = ["builders", "atom"] }
atom_syndication = { version = "0.12", default-features = false }
quick-xml = "0.39"
serde_json = "1"
sha2 = "0.10"
opentelemetry = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
test-utils = []
metrics = ["dep:opentelemetry"]

[dev-dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["metrics", "testing"] }

[lints]
workspace = true
