[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
argon2 = { workspace = true }
async-trait.workspace = true
base64.workspace = true
email_address.workspace = true
chrono = { workspace = true, features = ["serde"] }
croner.workspace = true
macros = { path = "../macros" }
orgize.workspace = true
pulldown-cmark.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
url = { workspace = true }
rss = { version = "2", default-features = false, features = ["builders", "atom"] }
atom_syndication = { version = "0.12", default-features = false }
quick-xml = "0.41"
serde_json = "1"
sha2 = "0.10"
unicode-normalization = "0.1"
unicode-segmentation = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
# Optional, host-only sqlx bridge for `#[derive(StrNewtype)]` types (Type/Encode/
# Decode). Off by default and never enabled for wasm — the CSR/wasm build pulls
# `common` without it, so `sqlx` is never in the wasm dependency graph.
sqlx = ["dep:sqlx"]
test-utils = ["cheap-kdf"]
cheap-kdf = []
# Compiles `common::test_support` (shared test fixtures) for downstream test crates;
# `common`'s own tests get it via `cfg(test)`. Pulls no extra deps.
test-support = []

[dev-dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }

[lints]
workspace = true
