[package]
name = "host"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
base64.workspace = true
http.workspace = true
opentelemetry.workspace = true
rand.workspace = true
sha2.workspace = true
sqlx.workspace = true
tracing.workspace = true
common = { path = "../common" }
macros = { path = "../macros" }

[dev-dependencies]
common = { path = "../common", features = ["test-support"] }
tempfile = { workspace = true }
tokio = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["metrics", "testing"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
