[package]
name = "host"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
base64.workspace = true
http.workspace = true
opentelemetry.workspace = true
rand.workspace = true
sha2.workspace = true
sqlx.workspace = true
tracing.workspace = true
common = { path = "../common" }
macros = { path = "../macros" }

[dev-dependencies]
common = { path = "../common", features = ["test-support"] }
tempfile = { workspace = true }
tokio = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["metrics", "testing"] }
tracing-subscriber = { workspace = true }

[features]
# `host` is server-only (never built for wasm — ADR-0058), so the sqlx storage
# bridge on its newtypes (e.g. `InviteCode`) is on by default. The feature only
# gates the `#[cfg(feature = "sqlx")]` impls the `StrNewtype` derive emits (#438);
# `sqlx` itself is a non-optional dep above.
default = ["sqlx"]
sqlx = []

[lints]
workspace = true
