[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
