[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
common.workspace = true
web = { path = "../web", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
rand.workspace = true
rpassword.workspace = true
sha2.workspace = true
axum.workspace = true
clap.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
sqlx.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
axum = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
tempfile.workspace = true
tower = { workspace = true }
