[package]
name = "jaunder"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "jaunder"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
common = { workspace = true, features = ["metrics"] }
storage.workspace = true
web = { path = "../web", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
rand.workspace = true
rpassword.workspace = true
sha2.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
log.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
lettre.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
flate2.workspace = true
tar.workspace = true
tokio-cron-scheduler.workspace = true
chrono = { workspace = true, features = ["serde"] }
croner.workspace = true
email_address.workspace = true
rust-embed = { version = "8.11.0", features = ["axum"] }
axum-embed = "0.1.0"
urlencoding.workspace = true
percent-encoding.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
# Spike #177: build the server without the leptos reactive page render. `web/ssr`
# stays on (the #[server] fn bodies must exist server-side); only the page-route
# rendering is swapped for a static CSR shell in create_router.
csr = []

[dev-dependencies]
axum = { workspace = true }
base64 = { workspace = true }
common = { workspace = true, features = ["test-utils"] }
storage = { workspace = true, features = ["test-utils", "test-support"] }
leptos = { workspace = true, features = ["ssr"] }
maik = "0.2.0"
rstest = { workspace = true }
rstest_reuse = { workspace = true }
server_fn = { version = "0.8", features = ["axum-no-default"] }
tempfile.workspace = true
tower = { workspace = true }

[lints]
workspace = true
