[package]
name = "storage"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
common.workspace = true
host = { path = "../host" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
croner.workspace = true
email_address.workspace = true
flate2.workspace = true
futures-util.workspace = true
log.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
tar.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
# Optional deps for the `test_support` module, pulled in by the `test-support`
# feature (so external test crates like `server` get them); also dev-deps below
# so `storage`'s own `cfg(test)` build has them without enabling the feature.
tempfile = { workspace = true, optional = true }
rstest_reuse = { workspace = true, optional = true }
# Pulled in by `test-utils` so downstream test crates (web, server) get the
# `#[automock]`-generated `Mock*Storage` fakes; never in a shipped binary.
mockall = { workspace = true, optional = true }

[dev-dependencies]
# Enable `common`'s `test-support` feature for `storage`'s own `cfg(test)` build so
# its tests can use `common::test_support` (external test crates get it via the
# `test-support` feature above).
common = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
test-utils = ["dep:mockall"]
# `seed-posts` gates only `seed_post_input` (the shared timeline-post recipe)
# and pulls NO extra deps, so the `test-support` binary can link the recipe
# without the heavy scaffolding. `test-support` implies it.
seed-posts = []
test-support = ["seed-posts", "dep:tempfile", "dep:rstest_reuse", "common/test-support"]

[lints]
workspace = true
