[package]
name = "test-support"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lints]
workspace = true

[[bin]]
name = "test-support"
path = "src/main.rs"

[dependencies]
storage = { workspace = true, features = ["seed-posts"] }
common = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# The binary shares storage's `seed_rendered_post` recipe via the lightweight
# `seed-posts` feature above (no extra deps). The heavy `test-support`
# scaffolding (`storage::test_support`, tempfile, rstest_reuse) is a
# dev-dependency ONLY, for the smoke tests below — the shipped binary never
# links it.
[dev-dependencies]
storage = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
