[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, optional = true }
leptos.workspace = true
leptos_dom.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

axum = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
common.workspace = true
storage = { workspace = true, optional = true }
http.workspace = true
cfg-if.workspace = true
chrono = { workspace = true, optional = true }
croner.workspace = true
email_address = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Location",
    "Storage",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
thiserror.workspace = true
tracing = { workspace = true, optional = true }

# Browser-only: used to convert the compose form's naive `datetime-local`
# value (author local time) to a UTC RFC3339 instant via `js_sys::Date`.
# Kept off the server build (no `Date` binding is needed there).
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }

[dev-dependencies]
base64.workspace = true
common = { workspace = true, features = ["test-utils"] }
storage = { workspace = true, features = ["test-utils"] }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:anyhow",
    "common/metrics",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:base64",
    "dep:chrono",
    "dep:storage",
    "dep:email_address",
    "dep:tracing",
]

[lints]
workspace = true
