[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, optional = true }
leptos.workspace = true
leptos_dom.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
reactive_stores.workspace = true

axum = { workspace = true, optional = true }
client = { path = "../client" }
common.workspace = true
host = { path = "../host", optional = true }
macros = { path = "../macros" }
storage = { workspace = true, optional = true }
http.workspace = true
cfg-if.workspace = true
chrono = { workspace = true, optional = true }
croner.workspace = true
serde.workspace = true
serde_json = { workspace = true }
strum.workspace = true
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "Location",
    "Storage",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
thiserror.workspace = true
tracing = { workspace = true, optional = true }

# Browser-only: used to convert the compose form's naive `datetime-local`
# value (author local time) to a UTC RFC3339 instant via `js_sys::Date`.
# Kept off the server build (no `Date` binding is needed there).
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
# `wasm_bindgen::JsValue` is used to build a `js_sys::Date` from the compose
# form's local datetime-local string (#70). wasm-only: the conversion only runs
# in the browser.
wasm-bindgen = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["test-utils", "test-support"] }
storage = { workspace = true, features = ["test-utils"] }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
csr = ["leptos/csr"]
server = [
    "dep:anyhow",
    "dep:host",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:chrono",
    "dep:storage",
    "dep:tracing",
]

[lints.clippy]
# Keep in sync with [workspace.lints.clippy] in the root Cargo.toml; Cargo forbids
# augmenting `workspace = true` with a local override, so web re-declares the workspace
# lints in order to add the one crate-specific exception below.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
# Leptos view fns return `impl IntoView` consumed by the framework; a caller can't
# ignore the return, so must_use_candidate is noise crate-wide here. (#94)
must_use_candidate = "allow"
