[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, optional = true }
leptos.workspace = true
leptos_dom.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
reactive_stores.workspace = true
# Non-optional: `MultipartData` is named in the `upload_media` signature, which
# compiles for both the wasm client stub and the server build, so the `multipart`
# codec cannot be gated to the `server` feature (`multer` stays server-only inside
# `server_fn`). (#517)
server_fn = { workspace = true, features = ["multipart"] }

axum = { workspace = true, optional = true }
client = { path = "../client" }
common.workspace = true
host = { path = "../host", optional = true }
macros = { path = "../macros" }
storage = { workspace = true, optional = true }
http.workspace = true
cfg-if.workspace = true
chrono = { workspace = true, optional = true }
croner.workspace = true
serde.workspace = true
serde_json = { workspace = true }
strum.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "Location",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
] }
thiserror.workspace = true
tracing = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["test-utils", "test-support"] }
storage = { workspace = true, features = ["test-utils"] }
# Decodes the profile default-format ActionForm's `format=<token>` body the same
# way server_fn's default Url codec does, so the wire-reject test exercises the
# real path. Version-matched to the leptos-transitive vendor to avoid a rebuild.
serde_qs = "0.15"
sqlx = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
csr = ["leptos/csr", "client/csr"]
server = [
    "dep:anyhow",
    "dep:host",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:chrono",
    "dep:storage",
]

[lints.clippy]
# Keep in sync with [workspace.lints.clippy] in the root Cargo.toml; Cargo forbids
# augmenting `workspace = true` with a local override, so web re-declares the workspace
# lints in order to add the one crate-specific exception below.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
# Leptos view fns return `impl IntoView` consumed by the framework; a caller can't
# ignore the return, so must_use_candidate is noise crate-wide here. (#94)
must_use_candidate = "allow"
