[workspace]

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
xshell = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
flate2 = "1"
brotli = "7"
coverage = { path = "../tools/coverage" }
tabled = "0.21.0"
url = "2.5.8"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
tempfile = "3"
