[package]
name = "devtool"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
coverage = { path = "../coverage" }
tempfile = "3"
signal-hook = "0.3"
brotli = "8"
flate2 = "1"
